# -Lab-1

./: CMakeLists.txt  ex1.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex13.cpp  ex14.cpp  ex15.cpp  ex16.cpp  ex17.cpp  ex18.cpp  ex19.cpp  ex2.cpp  ex20.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  main.cpp  mul_of_dig.cpp  sum_of_dig.cpp
Headers/: cartesian.h  ex1.h  ex10.h  ex11.h  ex12.h  ex13.h  ex14.h  ex15.h  ex16.h  ex17.h  ex18.h  ex19.h  ex2.h  ex20.h  ex3.h  ex4.h  ex5.h  ex6.h  ex7.h  ex8.h  ex9.h  mul_of_dig.h  polar.h  sum_of_dig.h
