cmake_minimum_required(VERSION 3.23)
project(Lab1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab1 main.cpp Headers/ex1.h ex1.cpp Headers/ex2.h ex2.cpp Headers/ex3.h ex3.cpp Headers/ex4.h Headers/ex5.h Headers/ex6.h Headers/ex7.h Headers/ex8.h Headers/ex9.h Headers/ex10.h ex4.cpp ex5.cpp ex6.cpp ex7.cpp ex8.cpp ex9.cpp ex10.cpp ex11.cpp Headers/ex11.h ex12.cpp Headers/ex12.h ex13.cpp Headers/ex13.h ex14.cpp Headers/ex14.h ex15.cpp Headers/ex15.h ex16.cpp Headers/ex16.h sum_of_dig.cpp Headers/sum_of_dig.h ex17.cpp Headers/ex17.h ex18.cpp Headers/ex18.h ex19.cpp Headers/ex19.h mul_of_dig.cpp Headers/mul_of_dig.h ex20.cpp Headers/ex20.h Headers/polar.h Headers/cartesian.h)
